almost ready for db setup
