# packages/wallet-cloud-vault/src/routes/api/index.ts
@@ -1,10 +1,14 @@
 import { Router } from 'express'
-import publicJwk from './public-key'
+import registration from './registration'
+import vault from './vault'
 
 const router = Router()
-
+const registrationRouter = Router({ mergeParams: true })
+const vaultRouter = Router({ mergeParams: true })
 export default async (): Promise<Router> => {
-  publicJwk(router)
-
+  registration(registrationRouter)
+  vault(vaultRouter)
+  router.use('/registration', registrationRouter)
+  router.use('/vault', vaultRouter)
   return router
 }
